tests/algorithms/x/Elixir/data_structures/linked_list/circular_linked_list.error
run: exit status 1
    warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 53 │       {i, s} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/circular_linked_list.exs:53:8: Main.to_string/1

    warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
    │
 96 │       {i, res} = try do
    │        ~
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/circular_linked_list.exs:96:8: Main.insert_nth/3

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 144 │       {i, res, val} = try do
     │        ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/circular_linked_list.exs:144:8: Main.delete_nth/2

     warning: variable "i" is unused (there is a variable with the same name in the context, use the pin operator (^) to match on it or prefix this variable with underscore if it is not meant to be used)
     │
 182 │       {cll, i} = try do
     │             ~
     │
     └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/circular_linked_list.exs:182:13: Main.main/0

    error: imported Kernel.to_string/1 conflicts with local function
    │
 37 │   def to_string(list) do
    │       ^
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/circular_linked_list.exs:37:7: Main (module)

    error: imported Kernel.length/1 conflicts with local function
    │
 23 │   def length(list) do
    │       ^
    │
    └─ /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/circular_linked_list.exs:23:7: Main (module)

** (CompileError) /workspace/mochi/tests/algorithms/x/Elixir/data_structures/linked_list/circular_linked_list.exs: cannot compile module Main (errors have been logged)

